# tuie

./: Cargo.toml  readme.md
chord_macro/: Cargo.toml  LICENSE  readme.md
chord_macro/src/: lib.rs
src/: lib.rs
src/ansi/: input.rs  mod.rs  output.rs  query.rs
src/editor/: bindings.rs  char_class.rs  default.rs  emacs.rs  mod.rs  modern.rs  state.rs  text_buffer.rs  vi.rs
src/gui/: box_drawing.rs  font.rs  image_scan.rs  mod.rs
src/gui/gpu/: atlas.rs  context.rs  decoration.rs  image.rs  mod.rs  pipeline.rs
src/input/: chord.rs  key.rs  mod.rs  modifiers.rs  mouse.rs  trigger.rs
src/render/: border.rs  color.rs  cursor.rs  mod.rs  style.rs  underline.rs
src/render/image/: cover.rs  decode_pool.rs  escape.rs  halfblock.rs  kitty.rs  mod.rs  shm.rs  sixel.rs  sixel_encode.rs  source.rs
src/runtime/: clipboard.rs  event.rs  mod.rs  popup.rs  signals.rs  tree.rs
src/test/: mod.rs
src/test/tests/: ansi.rs  border.rs  chord.rs  color.rs  grid.rs  input.rs  lab.rs  list.rs  mod.rs  modifiers.rs  pane.rs  rgb.rs  scrollbar.rs  split.rs  stack.rs  style.rs  text.rs  text_buffer.rs  text_overflow.rs  tooltip.rs  vi.rs
src/theme/: harmonious.rs  mod.rs
src/util/: flat_lookup.rs  lab.rs  mod.rs  rgb.rs  stack_pool.rs  text_overflow.rs
src/widget/: align.rs  chrome.rs  events.rs  field.rs  flex.rs  input.rs  mod.rs  revelation.rs  scrollbar.rs
src/widget/widgets/: grid.rs  image.rs  input.rs  list.rs  mod.rs  pane.rs  split.rs  stack.rs  text.rs  tooltip.rs
