[package]
name = "tuie"
version = "0.1.5"
edition = "2021"
description = "A rich, performant TUI library for Rust."
license = "MIT"
repository = "https://github.com/jake-stewart/tuie"
readme = "readme.md"
keywords = ["tui", "gui", "terminal", "widget", "ui"]
categories = ["command-line-interface", "gui", "rendering"]

[dependencies]
chord_macro = "0.1.0"
axis2d = "0.1.0"
sign = "0.1.0"
libc = "0.2.164"
signal-hook = "0.4.4"
unicode-display-width = "0.3.0"
unicode-segmentation = "1.12.0"
nonmax = "0.5.5"
paste = "1"
base64-simd = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"], optional = true }
winit = { version = "0.30", optional = true }
wgpu = { version = "23", optional = true }
pollster = { version = "0.4", optional = true }
fontdb = { version = "0.23", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
freetype-rs = { version = "0.38", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
freetype-rs = { version = "0.38", optional = true, features = ["bundled"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }

[features]
harmonious = []
images = ["dep:image"]
gui = ["harmonious", "dep:winit", "dep:wgpu", "dep:pollster", "dep:fontdb", "dep:freetype-rs", "dep:objc2"]

[dev-dependencies]
futures = "0.3"
