[package]
name = "chord_macro"
version = "0.1.0"
edition = "2021"
description = "Human readable input chord construction and pattern matching."
license = "MIT"
repository = "https://github.com/jake-stewart/tuie"
readme = "readme.md"
keywords = ["tui", "input", "chord", "macro", "tuie"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1.0.103"
